[tool.poetry]
name = "finpack"
version = "0.1.0"
description = "Super simple financial tracking and management tools."
authors = ["rackreaver <rackreaver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
coverage = "^6.2"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
