[tool.poetry]
name = "finpack"
version = "0.2.0"
description = "Super simple financial tracking."
authors = ["rackreaver <rackreaver@gmail.com>"]

[tool.poetry.scripts]
finpack = 'finpack.core.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
coverage = "^6.2"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
